--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#Project-specific files
+include/
+lib/
+
 # User-specific files
 *.rsuser
 *.suo
