--- a/chainsaw/chainsaw.vcxproj
+++ b/chainsaw/chainsaw.vcxproj
@@ -152,7 +152,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Desktop\RtMidi.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\rtmidi-5.0.0\RtMidi.cpp" />
     <ClCompile Include="chainsaw.cpp" />
     <ClCompile Include="Synth.cpp" />
   </ItemGroup>
